# star-vector

./: AGENTS.md  README.md  pyproject.toml
docker/: Dockerfile
starvector/data/: util.py
